--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed": "ts-node prisma/seed.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,30 @@
   "homepage": "https://github.com/kamrulhaider/easy-accounting#readme",
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "pino": "^9.3.2",
+    "supertest": "^7.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
+    "pino-pretty": "^11.2.2",
     "prisma": "^6.15.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "dotenv-cli": "^7.4.2",
+    "cross-env": "^7.0.3"
   }
 }
