--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "@types/supertest": "^2.0.16",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
     "jest": "^29.7.0",
     "pino-pretty": "^11.2.2",
     "prisma": "^6.15.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2",
-    "dotenv-cli": "^7.4.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.9.2"
   }
 }
