--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "ts-node-dev src/index.ts",
     "seed": "ts-node prisma/seed.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- jest --runInBand"
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,23 +29,16 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino": "^9.3.2",
-    "supertest": "^7.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
-    "@types/supertest": "^2.0.16",
-    "cross-env": "^7.0.3",
-    "dotenv-cli": "^7.4.2",
-    "jest": "^29.7.0",
     "pino-pretty": "^11.2.2",
     "prisma": "^6.15.0",
-    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
