--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev src/index.ts",
     "seed": "ts-node prisma/seed.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "purge-deleted-companies": "ts-node prisma/purgeDeletedCompanies.ts"
   },
   "repository": {
     "type": "git",
